# LIOS-Legal-Intelligence-Operating-System

./: .env.example  .gitattributes  .gitignore  =0.0.27  CLAUDE.md  CLEANUP_AND_REBUILD_PLAN.md  DESIGN_ANALYSIS.md  Dockerfile  LIOS_MOBILE_AND_CORPUS_RUNBOOK.md  LIOS_UNIFIED_VISION.md  MACOS_INSTALL_FIX.md  MACOS_M1_READY.md  MACOS_M1_STARTUP.md  MACOS_QUICK_REFERENCE.md  PATH_B_IMPLEMENTATION_CHECKLIST.md  README.md  REPO_ANALYSIS_AND_VISION.md  SETUP_DIAGNOSTICS.sh  VISION_VERIFICATION.md  lios_server.py  pyproject.toml  requirements.txt  run_lios.sh  setup_vm.sh  start.sh  start_lios_m1.sh  verify_startup.sh
.github/: copilot-instructions.md
docs/: api_reference.md  architecture.md  future_scope.md  knowledge_base_guide.md  regulation_status.md
lios/: __init__.py  ai_tracking.py  config.py  logging_setup.py  main.py
lios-mobile/: App.tsx  app.json  package-lock.json  package.json
mobile-expo/: README.md  package-lock.json  package.json
scripts/: autolearn.py  autolearn_ollama.py  build_corpus.py  build_qa_corpus.py  build_rich_seed_corpus.py  documents_reference.md  export_finetune.py  export_kb.py  ingest_desktop_pdfs.py  ingest_german_law.py  ingest_pdfs.py  ingest_regulations.py  learn_copilot.py  setup_kb.py
tests/: __init__.py  conftest.py  test_agents.py  test_carbon_accounting.py  test_caselaw_fetcher.py  test_chat_training.py  test_chat_ui.py  test_consensus.py  test_decay_scoring.py  test_document_indexer.py  test_eurlex_pipeline.py  test_evaluation.py  test_features.py  test_german_law.py  test_german_law_fetcher.py  test_high_priority.py  test_improvements.py  test_infrastructure.py  test_ingestion_v2.py  test_intelligence.py  test_intelligence_api.py  test_jurisdiction_conflict.py  test_learning_scale.py  test_llm_refiner.py  test_logging_setup.py  test_materiality.py  test_mobile_intelligence_api.py  test_new_endpoints.py  test_ollama_rag.py  test_orchestration.py  test_pdf_ingester.py  test_rag_pipeline.py  (+3 more)
(+192 files in other folders)
