[project]
name = "lios"
version = "0.1.0"
description = "Legal Intelligence Operating System for EU sustainability compliance"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
llm = ["openai>=1.14.0"]
dev = ["pytest>=8.1.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[project.scripts]
lios = "lios.cli.interface:cli"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
